# codewhisperer-test-lab

./: README.md
client/: package-lock.json  package.json
client/src/: App.tsx
server/: Cargo.toml  README.md
server/src/: main.rs
